<resources>
    <string name="app_name">Naturblick</string>
    <string name="action_settings">Settings</string>
    <string name="menu_start">Start</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_species_list">Species</string>
    <string name="home_identify_animals_and_plants">Identify animals and plants</string>
    <string name="record_an_animal">Record an animal sound</string>
    <string name="select_characteristics">Select characteristics</string>
    <string name="photograph_a_plant">Photograph a plant</string>
    <string name="field_book">Fieldbook</string>
    <string name="id_result">Suggestions</string>
    <string name="species_portraits">Learn about species</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="imprint">Imprint</string>
    <string name="about">About Naturblick</string>
    <string name="description">Description</string>
    <string name="in_the_city">In the city</string>
    <string name="features">Characteristics</string>
    <string name="good_to_know">Interesting facts</string>
    <string name="red_list_germany_gefahrdet">endangered</string>
    <string name="red_list_germany_Vorwarnliste">warning list</string>
    <string name="red_list_germany_ausgestorbenOderVerschollen">extinct or missing</string>
    <string name="red_list_germany_vomAussterbenBedroht">threatened with extinction</string>
    <string name="red_list_germany_starkGefahrdet">severely endangered</string>
    <string name="red_list_germany_GefahrdungUnbekanntenAusmasses">endangerment unknown</string>
    <string name="red_list_germany_extremSelten">extremely rare</string>
    <string name="red_list_germany_DatenUnzureichend">insufficient data available</string>
    <string name="red_list_germany_ungefahrdet">not endangered</string>
    <string name="red_list_germany_nichtBewertet">not evaluated</string>
    <string name="red_list_germany_keinNachweis">no proof</string>
    <string name="red_list_germany">Endangerment status Germany: %s</string>
    <string name="iucn_ne">not evaluated</string>
    <string name="iucn_dd">data deficient</string>
    <string name="iucn_lc">least concern</string>
    <string name="iucn_nt">near threatened</string>
    <string name="iucn_vu">vulnerable</string>
    <string name="iucn_en">endangered</string>
    <string name="iucn_cr">critically edangered</string>
    <string name="iucn_ew">extinct in the wild</string>
    <string name="iucn_ex">extinct</string>
    <string name="iucn_category">Endangerment status IUCN: %s</string>
    <string name="sources">Sources</string>
    <string name="photo">Photo by</string>
    <string name="search_hint">species</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="identifiy">Identify</string>
    <string name="confirm">Submit</string>
    <string name="no_species_selected">Unknown species</string>
    <string name="save_without_species">Save as unknown species</string>
    <string name="details">Notes</string>
    <string name="quantity">Number</string>
    <string name="observation_list">List</string>
    <string name="observation_map">Map</string>
    <string name="create_manual">Create observation</string>
    <string name="field_book_map">Map</string>
    <string name="field_book_observation">Observation</string>
    <string name="select">Select</string>
    <string name="no_connection">Can not connect to server, please check your connectivity.</string>
    <string name="error_response">The server responded with an error, please try again later.</string>
    <string name="sound_recording">Microphone recording</string>
    <string name="seconds">seconds</string>
    <string name="stop_recording">Stop</string>
    <string name="record_permission_missing">To record animals the app needs the permission to record audio</string>
    <string name="feedback_form">Use our feedback form</string>
    <string name="feedback_email">Send an email</string>
    <string name="imprint_title">Imprint</string>
    <string name="imprint_1">Museum für Naturkunde\nLeibniz Institute for Evolution and Biodiversity Science\nInvalidenstraße 43\n10115 Berlin, Germany</string>
    <string name="imprint_2">Landesunmittelbare rechtsfähige Stiftung des öffentlichen Rechts</string>
    <string name="imprint_3">Telefon: +49 (0)30 2093-8591\nFax: +49 (0)30 2093-8561</string>
    <string name="imprint_4">E-Mail: <a href="mailto:info@mfn.berlin">info(at)mfn.berlin</a>\nInternet: <a href="https://www.museumfuernaturkunde.berlin">https://www.museumfuernaturkunde.berlin</a></string>
    <string name="imprint_5">Authorized representative person\nProf. Johannes Vogel, PhD (Director General),\nStephan Junker (Managing Director)</string>
    <string name="imprint_6">Controlling authority\nSenatsverwaltung für Wirtschaft, Technologie und Forschung\nMartin-Luther-Straße 105, 10825 Berlin</string>
    <string name="imprint_7">Content responsibility (German law § 55 Abs. 2 RStV)\nUlrike Sturm</string>
    <string name="imprint_8">UVAT-ID (German law § 27 a Umsatzsteuergesetz) Bank account\nDeutsche Bank\naccount number: 512 087 800\nbank code: 100 708 48\nIBAN: DE40 1007\n0848 051 2087 800\nBIC/SWIFT: DEUTDEDB110</string>
    <string name="imprint_9">Funding 2016-2021: German Federal Ministry for the Environment, Nature Conservation and Nuclear Safety (BMU)</string>
    <string name="imprint_10">Further information <a href="https://naturblick.museumfuernaturkunde.berlin/about?lang=en">here</a>.</string>
    <string name="imprint_sources_title">Sources</string>
    <string name="imprint_sources">The sources for the image and sound materials are indicated in the respective species portraits. Image and sound materials of species that do not yet have a species portrait or from other contexts of the app, such as identification tools, are given under other sources. German and English names taken in part from GBIF.org (2022), GBIF Home Page. Available from: <a href="https://www.gbif.org">https://www.gbif.org</a> [28 September 2022].</string>
    <string name="imprint_more_title">Additional Regulations</string>
    <string name="imprint_more_1">Copyright</string>
    <string name="imprint_more_2">All parts of the Website of the Museum für Naturkunde Berlin are copyrighted. You may not copy, reproduce, republish, download, post, broadcast, transmit, adapt or otherwise use any material on the Site other than for your own personal non-commercial use.</string>
    <string name="imprint_more_3">Disclaimer</string>
    <string name="imprint_more_4">For all information published on the site of the Museum für Naturkunde Berlin the following conditions apply:</string>
    <string name="imprint_more_5">Use of the material provided is bound by the following agreement: The Museum für Naturkunde Berlin makes every effort to provide timely and accurate information. Nevertheless, mistakes and confusions may occur. Therefore the publishers make no guarantee about the correctness, completeness, quality or suitability for any purpose of the information provided or linked to by this site. Information is provided "as is" without warranty of any kind, either expressed or implied, including, but not limited to warranties of fitness for a particular purpose. Under no circumstances shall the publishers be liable for any special, indirect, consequential or incidental damages or any damages whatsoever resulting from use of information provided by this site. If misleading, incorrect or otherwise inappropriate information is brought to our attention, a reasonable effort will be made to redress the problems.</string>
    <string name="imprint_more_6">The Museum für Naturkunde Berlin reserves the right to change, supplement, or delete some or all of the information on its Internet web site without notice. Similarly, the Museum für Naturkunde Berlin also reserves the right to temporarily or permanently discontinue the Internet web site.</string>
    <string name="imprint_more_7">Any claims relating to the materials or the WWW site will be governed by German law.</string>
    <string name="imprint_more_8">The general disclaimer is part of <a href="https://www.disclaimer.de/disclaimer.htm">this disclaimer</a>.</string>
    <string name="imprint_more_9">This disclaimer is to be considered as part of the internet publication from which you were referred. If individual terms or sections of this statement are not legal or correct, the validity and content of the other parts remain uninfluenced by this fact.</string>
    <string name="imprint_more_10">Source: <a href="https://www.disclaimer.de/disclaimer.htm">www.datenschutzbeauftragter-info.de</a></string>
    <string name="imprint_more_11">© Museum für Naturkunde Berlin</string>
    <string name="about_1">In an interdisciplinary team, we are researching and developing digital tools for the urban experience of nature at the Museum für Naturkunde Berlin. For example, we are testing the use of pattern recognition in species identification.\n\nWith our smartphone app Naturblick we support the direct experience of nature in the city. With a variety of functions, you can explore nature in the city, identify animals and plants, and save your observations. Also take a look at our <a href="https://naturblick.museumfuernaturkunde.berlin/?lang=en">plattform</a>. There you will find, for example, a map with confirmed observations of other users and the section "WissensWeiten" with informative and inspiring content for all those who want to take a closer look at the nature around them.\n\n<b>Sound recognition</b>\n\nThe results of the automated sound recognition are generated by comparing the sound with audio recordings of animals.\n\nThis means\n1) only species that have been trained can be recognized,\n2) the recognition works best when there is a high similarity to the recording situation and quality (e.g. microphone quality).\n\nThe algorithm was developed in cooperation with BirdID. It was trained with recordings of mammals, birds, amphibians and orthoptera. The list of species that can be identified can be found <a href="https://naturblick.museumfuernaturkunde.berlin/animalrecognition?lang=en">here</a>.\n\n<b>Plant recognition</b>\n\nYour photos of plants will be identified by pattern recognition. The results of the pattern recognition are generated by comparing them to data (in this case photos of plants), with which the algorithm has been trained.\n\nThis means:\n1) only species that have been trained can be recognized,\n2) species that have not been trained can also have matches with the trained material,\n3) the recognition works best when there is a high similarity to the photo situation and quality of the training material (e.g. plants in the wild) and\n4) incorrect results may also be displayed.\n\nThe list of plant species that can be identified with Naturblick can be found <a href="https://naturblick.museumfuernaturkunde.berlin/plantrecognition?lang=en">here</a>.\n\nWe use the pattern recognition of Pl@ntNet for plant recognition. More information about Pl@ntNet can be found <a href="https://plantnet.org/en/about/">here</a>.</string>
    <string name="about_2"></string>
    <string name="more_sources">More sources</string>
    <string name="account">Account</string>
    <string name="sign_in">Login</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="email_or_password_invalid">Credentials not recognized. Please validate your e-mail and password.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="delete_account_note_password">Note</string>
    <string name="delete_account_note_password_text">When you set a new password, all phones linked to the account will be automatically logged out for security reasons. All your observations will remain linked to your account.</string>
</resources>