<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2024 Museum für Naturkunde Berlin.
  ~ This code is licensed under MIT license (see LICENSE.txt for details)
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.species.groups.GroupsFragment">

    <data>
        <import type="berlin.mfn.naturblick.BuildConfig"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnSecondaryHighEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_1"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_2"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_3"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_4"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                android:textColorLink="?attr/colorOnSecondarySignalLow"
                app:autoLink="@{true}"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                android:text="@string/imprint_5" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_6"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_7"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_8"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_9"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_10"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                app:autoLink="@{true}" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{@string/app_version(BuildConfig.VERSION_NAME)}"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_sources_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnSecondaryHighEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_sources"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                app:autoLink="@{true}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_sources"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnSecondaryHighEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_1"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_2"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_3"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_4"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_5"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_6"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_7"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_8"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_9"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_10"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                app:autoLink="@{true}"
                android:textColorLink="?attr/colorOnSecondarySignalLow"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/imprint_more_11"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorOnSecondaryMediumEmphasis"
                />

        </LinearLayout>
    </ScrollView>
</layout>
