<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.species.groups.GroupsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/about"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/about_1"
                android:textAppearance="?attr/textAppearanceBody1"
                app:autoLink="@{true}"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/about_2"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feedback_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_form"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feedback_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_email"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                />

        </LinearLayout>
    </ScrollView>
</layout>