<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2024 Museum für Naturkunde Berlin.
  ~ This code is licensed under MIT license (see LICENSE.txt for details)
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_field_book_list">
    <fragment
        android:id="@+id/nav_field_book_list"
        android:name="berlin.mfn.naturblick.ui.fieldbook.fieldbook.FieldbookFragment"
        android:label="@string/field_book"
        tools:layout="@layout/fragment_fieldbook">
        <action
            android:id="@+id/nav_field_book_list_to_nav_field_book_observation"
            app:destination="@id/nav_field_book_observation" />
        <action
            android:id="@+id/nav_field_book_list_to_nav_field_book_map"
            app:destination="@id/nav_field_book_map" />
    </fragment>
    <activity
        android:id="@+id/nav_field_book_map"
        android:name="berlin.mfn.naturblick.ui.fieldbook.fieldbookmap.FieldbookMapActivity"
        android:label="@string/field_book_map"
        tools:layout="@layout/fragment_fieldbook_map">
        <argument
            android:name="occurence_id"
            app:argType="android.os.ParcelUuid"
            app:nullable="true"
            android:defaultValue="@null"
            />
    </activity>
    <activity
        android:id="@+id/nav_field_book_observation"
        android:name="berlin.mfn.naturblick.ui.fieldbook.observation.ObservationActivity"
        android:label="@string/field_book_observation">
        <argument
            android:name="observation_action"
            app:argType="berlin.mfn.naturblick.ui.fieldbook.ObservationAction" />
    </activity>
</navigation>
